[package]
name = "hpm-hal"
version = "0.0.1"
edition = "2024"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/hpmicro/hpm-hal"
documentation = "https://docs.rs/hpm-hal"
homepage = "https://github.com/hpmicro/hpm-hal"
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL crate for HPMicro's RISC-V MCUs, HPM5300, HPM6700/HPM6400, HPM6200, HPM6300, HPM6800"
keywords = ["hpmicro", "riscv", "hal"]
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
# local-development
# hpm-metapac = { path = "../hpm-data/build/hpm-metapac" }
# git snapshot
hpm-metapac = { git = "https://github.com/hpmicro-rs/hpm-metapac.git", tag = "hpm-data-26d52cc9324f6c112021be5b45bc36bf0ef9f149" }

hpm-riscv-rt = { version = "0.3.3", optional = true }
andes-riscv = { version = "0.1.4" }

riscv = { version = "0.16.0", features = ["critical-section-single-hart"] }
riscv-pac = "0.3.0"

embedded-hal = { version = "1.0.0" }
embassy-time-driver = { version = "0.2.1", features = [
    "tick-hz-1_000_000",
], optional = true }
embassy-sync = { version = "0.7.2" }
embassy-futures = { version = "0.1.1" }
embassy-hal-internal = { version = "0.3.0", default-features = false }
embassy-time = { version = "0.5.0", optional = true }
embassy-usb-driver = { version = "0.2.0" }
critical-section = "1.1.3"
embassy-time-queue-utils = { version = "0.3.0", optional = true }

static_assertions = "1"

defmt = { version = "1.0.1", optional = true }
embedded-io = "0.7.1"
nb = "1.1.0"
futures-util = { version = "0.3.30", default-features = false }
embedded-hal-nb = "1.0.0"
embedded-io-async = "0.7.0"
embedded-hal-async = "1.0.0"
chrono = { version = "0.4.38", default-features = false, optional = true }
mcan = { version = "0.7.0", optional = true }
embedded-storage = "0.3.1"
rand_core = "0.9.3"
sdio-host = { version = "0.9.0", default-features = false }
embedded-sdmmc = { version = "0.9", optional = true }
vcell = "0.1.3"
embassy-net-driver = "0.2.0"

[build-dependencies]
# hpm-metapac = { path = "../hpm-data/build/hpm-metapac", default-features = false, features = ["metadata"] }
hpm-metapac = { git = "https://github.com/hpmicro-rs/hpm-metapac.git", tag = "hpm-data-26d52cc9324f6c112021be5b45bc36bf0ef9f149", default-features = false, features = ["metadata"] }
proc-macro2 = "1.0.92"
quote = "1.0.37"

[features]
default = ["rt", "embassy", "time"]

rt = ["dep:hpm-riscv-rt", "hpm-metapac/rt"]
defmt = ["dep:defmt", "embassy-usb-driver/defmt"]
time = ["dep:embassy-time"]
embassy = ["dep:embassy-time-driver", "dep:embassy-time-queue-utils"]
usb-pin-reuse-hpm5300 = []

# Time driver selection (default: MCHTMR)
time-driver-gptmr0 = []
time-driver-gptmr1 = []

mcan = ["dep:mcan"]
chrono = ["dep:chrono"]

# HPM5300 series - No NONCACHEABLE_RAM, no PMA needed
hpm5301 = ["hpm-metapac/hpm5301"]
hpm5321 = ["hpm-metapac/hpm5321", "mcan"]
hpm5331 = ["hpm-metapac/hpm5331"]
hpm5361 = ["hpm-metapac/hpm5361", "mcan"]

# HPM6200 series - PMA noncacheable
hpm6220 = ["hpm-metapac/hpm6220", "hpm-riscv-rt/pma-noncacheable"]
hpm6240 = ["hpm-metapac/hpm6240", "mcan", "hpm-riscv-rt/pma-noncacheable"]
hpm6260 = ["hpm-metapac/hpm6260", "mcan", "hpm-riscv-rt/pma-noncacheable"]
hpm6264 = ["hpm-metapac/hpm6264", "mcan", "hpm-riscv-rt/pma-noncacheable"]
hpm6280 = ["hpm-metapac/hpm6280", "mcan", "hpm-riscv-rt/pma-noncacheable"]
hpm6284 = ["hpm-metapac/hpm6284", "mcan", "hpm-riscv-rt/pma-noncacheable"]

# HPM6300 series - PMA noncacheable
hpm6320 = ["hpm-metapac/hpm6320", "hpm-riscv-rt/pma-noncacheable"]
hpm6330 = ["hpm-metapac/hpm6330", "hpm-riscv-rt/pma-noncacheable"]
hpm6340 = ["hpm-metapac/hpm6340", "hpm-riscv-rt/pma-noncacheable"]
hpm6350 = ["hpm-metapac/hpm6350", "hpm-riscv-rt/pma-noncacheable"]
hpm6360 = ["hpm-metapac/hpm6360", "hpm-riscv-rt/pma-noncacheable"]
hpm6364 = ["hpm-metapac/hpm6364", "hpm-riscv-rt/pma-noncacheable"]

# HPM6400/6700 series - hpm67-fix (includes RTT fix) + PMA noncacheable
hpm6420 = ["hpm-metapac/hpm6420", "hpm-riscv-rt/hpm67-fix", "hpm-riscv-rt/pma-noncacheable"]
hpm6430 = ["hpm-metapac/hpm6430", "hpm-riscv-rt/hpm67-fix", "hpm-riscv-rt/pma-noncacheable"]
hpm6450 = ["hpm-metapac/hpm6450", "hpm-riscv-rt/hpm67-fix", "hpm-riscv-rt/pma-noncacheable"]
hpm6454 = ["hpm-metapac/hpm6454", "hpm-riscv-rt/hpm67-fix", "hpm-riscv-rt/pma-noncacheable"]
hpm64a0 = ["hpm-metapac/hpm64a0", "hpm-riscv-rt/hpm67-fix", "hpm-riscv-rt/pma-noncacheable"]
hpm64g0 = ["hpm-metapac/hpm64g0", "hpm-riscv-rt/hpm67-fix", "hpm-riscv-rt/pma-noncacheable"]
hpm6730 = ["hpm-metapac/hpm6730", "hpm-riscv-rt/hpm67-fix", "hpm-riscv-rt/pma-noncacheable"]
hpm6750 = ["hpm-metapac/hpm6750", "hpm-riscv-rt/hpm67-fix", "hpm-riscv-rt/pma-noncacheable"]
hpm6754 = ["hpm-metapac/hpm6754", "hpm-riscv-rt/hpm67-fix", "hpm-riscv-rt/pma-noncacheable"]

# HPM6800 series - PMA noncacheable
hpm6830 = ["hpm-metapac/hpm6830", "mcan", "hpm-riscv-rt/pma-noncacheable"]
hpm6850 = ["hpm-metapac/hpm6850", "mcan", "hpm-riscv-rt/pma-noncacheable"]
hpm6880 = ["hpm-metapac/hpm6880", "mcan", "hpm-riscv-rt/pma-noncacheable"]

# HPM6E series - PMA noncacheable
hpm6e50 = ["hpm-metapac/hpm6e50", "mcan", "hpm-riscv-rt/pma-noncacheable"]
hpm6e60 = ["hpm-metapac/hpm6e60", "mcan", "hpm-riscv-rt/pma-noncacheable"]
hpm6e70 = ["hpm-metapac/hpm6e70", "mcan", "hpm-riscv-rt/pma-noncacheable"]
hpm6e80 = ["hpm-metapac/hpm6e80", "mcan", "hpm-riscv-rt/pma-noncacheable"]
