[package]
name = "hpm5300evk"
version = "0.1.0"
edition = "2021"

[dependencies]
# hpm5301 is a subset of hpm5361, either is ok if you have the HPM5301 board.
hpm-hal = { path = "../..", features = [
    "rt",
    "embassy",
    "hpm5361",
    "defmt",
    "usb-pin-reuse-hpm5300",
] }

defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-halt = "1.0.0"

riscv = { version = "0.15.0", features = ["critical-section-single-hart"] }
andes-riscv = "0.1.1"

embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-hal-bus = "0.2.0"

embassy-time = { version = "0.5.0", features = ["tick-hz-1_000_000"] }
embassy-executor = { version = "0.9.1", features = [
    "nightly",
    "arch-riscv32",
    "executor-thread",
] }
embassy-embedded-hal = "0.5.0"
embassy-sync = "0.7.2"

embassy-usb = { version = "0.5.1", features = [
    "defmt",
    "max-handler-count-8",
    "max-interface-count-8",
] }
usbd-hid = "0.9.0"
mcan = "0.5.0"

assign-resources = "0.4.1"
futures-util = { version = "0.3.31", default-features = false }
heapless = "0.9.2"
micromath = "2.1.0"
static_cell = "2"
rand_core = "0.9.3"

tinygif = "0.0.4"
smart-leds = "0.4.0"
ws2812-spi = "0.5.0"
# text-image = "0.2"
microfft = "0.6.0"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2
