[package]
name = "hpm6300evk"
version = "0.1.0"
edition = "2021"

[dependencies]
hpm-hal = { path = "../..", features = ["rt", "embassy", "hpm6360", "defmt"] }

defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-halt = "1.0.0"

embedded-hal = "1.0.0"

riscv = { version = "0.15.0", features = ["critical-section-single-hart"] }
andes-riscv = "0.1.1"

embassy-time = { version = "0.5.0", features = ["tick-hz-1_000_000"] }
embassy-executor = { version = "0.9.1", features = [
    "nightly",
    "arch-riscv32",
    "executor-thread",
] }

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2
