[package]
name = "hpm6300evk"
version = "0.1.0"
edition = "2021"

[dependencies]
hpm-hal = { path = "../..", features = ["rt", "embassy", "hpm6360", "defmt", "embedded-sdmmc"] }
embedded-sdmmc = "0.9"

defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-halt = "1.0.0"

embedded-hal = "1.0.0"

riscv = { version = "0.16.0", features = ["critical-section-single-hart"] }
andes-riscv = "0.3"

embassy-time = { version = "0.5.0", features = ["tick-hz-1_000_000"] }
embassy-executor = { version = "0.9.1", features = [
    "nightly",
    "arch-riscv32",
    "executor-thread",
] }
embassy-net = { version = "0.8.0", features = ["proto-ipv4", "tcp", "udp", "dhcpv4", "medium-ethernet", "defmt"] }
embassy-futures = "0.1.1"
embedded-io-async = "0.7"
static_cell = { version = "2", features = ["nightly"] }
smoltcp = { version = "0.12", default-features = false }

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2
