[package]
name = "hpm6750evkmini"
version = "0.1.0"
edition = "2021"

[dependencies]
# defmt is not available on hpm67 dual-core chips
# defmt = "0.3.8"
# defmt-rtt = "0.4.1"
hpm-hal = { path = "../..", features = [
    "rt",
    "embassy",
    "hpm6750",
    "chrono",
    "time",
], default-features = false }

embedded-hal = "1.0.0"

panic-halt = "1.0.0"
riscv = { version = "0.15.0", features = ["critical-section-single-hart"] }
riscv-semihosting = "0.1.0"
andes-riscv = "0.1.1"

embassy-time = { version = "0.5.0", features = ["tick-hz-1_000_000"] }
embassy-executor = { version = "0.9.1", features = [
    "nightly",
    "arch-riscv32",
    "executor-thread",
] }
embassy-usb = { version = "0.5.1", features = [
    "max-handler-count-8",
    "max-interface-count-8",
] }

heapless = "0.9.2"
embedded-io = "0.7.1"
futures-util = { version = "0.3.31", default-features = false }
assign-resources = "0.4.1"
embedded-graphics = "0.8.1"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
usbd-hid = "0.9.0"
static_cell = "2"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2
