[package]
name = "hpm6750evkmini"
version = "0.1.0"
edition = "2021"

[features]
default = []
time-driver-gptmr0 = ["hpm-hal/time-driver-gptmr0"]
time-driver-gptmr1 = ["hpm-hal/time-driver-gptmr1"]

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.1.0"
hpm-hal = { path = "../..", features = [
    "rt",
    "embassy",
    "hpm6750",  # Includes hpm67-fix which auto-configures RTT non-cacheable
    "chrono",
    "time",
    "defmt",
    "embedded-sdmmc",
], default-features = false }

embedded-sdmmc = "0.9"

embedded-hal = "1.0.0"

panic-halt = "1.0.0"
riscv = { version = "0.16.0", features = ["critical-section-single-hart"] }
riscv-semihosting = "0.2.1"
andes-riscv = "0.1.4"

embassy-time = { version = "0.5.0", features = ["tick-hz-1_000_000"] }
embassy-executor = { version = "0.9.1", features = [
    "nightly",
    "arch-riscv32",
    "executor-thread",
] }
embassy-usb = { version = "0.5.1", features = [
    "max-handler-count-8",
    "max-interface-count-8",
] }

heapless = "0.9.2"
embedded-io = "0.7.1"
futures-util = { version = "0.3.31", default-features = false }
assign-resources = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-hal-async = "1.0.0"
usbd-hid = "0.9.0"
static_cell = "2"
microfft = "0.6.0"
libm = "0.2"

rw007 = { path = "../../../rw007", features = ["defmt", "async"] }

# embassy-net dependencies - uncomment when network is available
# embassy-net = { path = "../../../embassy/embassy-net", features = ["dhcpv4", "proto-ipv4", "tcp", "udp", "dns", "medium-ethernet", "defmt"] }
# embassy-net-driver = { path = "../../../embassy/embassy-net-driver" }

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2
