[package]
name = "hpm6e00evk"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
hpm-hal = { path = "../../", features = ["hpm6e80", "rt", "embassy", "defmt"] }

panic-halt = "1.0.0"

defmt = "1.0.1"
defmt-rtt = "1.1.0"
embedded-hal = "1.0.0"
riscv = { version = "0.15.0", features = ["critical-section-single-hart"] }
andes-riscv = "0.1.1"
heapless = "0.9.2"

embassy-time = { version = "0.5.0", features = ["tick-hz-1_000_000"] }
embassy-executor = { version = "0.9.1", features = [
    "nightly",
    "arch-riscv32",
    "executor-thread",
] }
embassy-sync = "0.7.2"

embedded-io = "0.7.1"
embedded-graphics = "0.8.1"
embassy-usb = { version = "0.5.1", features = [
    "defmt",
    "max-handler-count-8",
    "max-interface-count-8",
] }
futures-util = { version = "0.3.31", default-features = false }
tinygif = "0.0.4"
assign-resources = "0.5.0"
embedded-hal-bus = "0.3.0"
usbd-hid = "0.9.0"
static_cell = "2"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "z" # Optimize for size.
debug = 2
